--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ oscrypto-ca-bundle.crt
 Package Control.last-run
 Package Control.merged-ca-bundle
 Package Control.user-ca-bundle
+sublemacspro_isearch_history.sublime-settings
